--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
 <head>
 <body>
 
+<canvas id="myCanvas" width=800 height=600 style="border:1px solid #d3d3d3;">
+</canvas>
 <!-- to have:
      change cursor
      every half second have a circle appear
      300 or (x) depending on success of clicking the circle image
   -->
+<script src="actions.js">
 
+</script>
 <form method="GET" action=".">
   <input type="text" size="40" name="input">
   <button type="submit" name="submit" value="true">Submit</button>
 </form>
+<br><br><br><br><br>
+<img src="hitcircle.png" id="hitcircle"></img>
+<img src="hitcircleoverlay.png" id="hitcircleoverlay"></img>
+
+
 
 </body>
 </head>
