--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <html>
 <head>
 <body>
-
-<canvas id="myCanvas" width=800 height=600 style="border:1px solid #d3d3d3;">
+<div class="test">
+<canvas id="canvas" width=800 height=600 style="border:1px solid #d3d3d3;">
+  <img id="bg" src="repaint.jpg"></img>
 </canvas>
+</div>
+
 <!-- to have:
      change cursor
      every half second have a circle appear
@@ -21,8 +24,8 @@
 <br><br><br><br><br>
 <img src="hitcircle.png" id="hitcircle"></img>
 <img src="hitcircleoverlay.png" id="hitcircleoverlay"></img>
-
-
+<img src="hit0.png" id="0"></img>
+<img src="hit100.png" id="100"></img>
 
 </body>
 </head>
